first API call success

--- a/app/views/simple_feed/index.html.erb
+++ b/app/views/simple_feed/index.html.erb
@@ -1,5 +1,5 @@
 <ul>
   <% @feed_items.each do |item| %>
-    <li><%= item['text'] %></li>
+    <li><%= link_to item['text'], item['link_url'] %></li>
   <% end %>
 </ul>
